# humanoidlabsXstockholm

./: README_HAND_TRACKING.md  README_KalmanFilter_Playground.md  README_PhoneGyro_Control.md  hand_tracking_ipc_server.py  horizontal_phone_server.py  kalman_filter.py  kalman_filter_playground.py  lovable_prompt.md  map_workspace.py  phone_gyro_server.py  phone_gyro_server_ngrok.py  phone_gyro_server_with_kalman.py  phone_imu_server.py  phone_joystick_ik.py  phone_server_clean.py  run_phone_joystick.py  run_sim_teleoperate.sh  simple_cv_test.py  simple_phone_server.py  start_phone_control.py  start_phone_control_ngrok.py  start_robot_phone_control.py  test_basic_cv.py  test_hand_ipc_system.py  test_hand_leader.py  test_hand_standalone.py  test_kalman_playground.py  test_phone_gyro.py  test_robot_connection.py  verify_system_ready.py
.claude/: settings.local.json
cv/: README.md  cv_hand_tracker.py  demo.py  lerobot_integration.py  palm_bounding_box.py  requirements.txt  simple_hand_tracker.py
keyboard_teleop/: keyboard_teleop.py
lerobot/: flyfeed.py  observe_robot.py  pyproject.toml  requirements.txt  reset_teleop.sh  test_teleoperate_command.py
lerobot/src/lerobot/teleoperators/hand_leader/hand_tracking/: pyproject.toml
lerobot_hand_tracking/: pyproject.toml
recovered-4ce37e6/: README_HandCV_Integration.md  calibration_helper.py  demo_robot_commands.py  find_robot_port.py  fix_dependencies.py  hand_tracking_server.py  hand_tracking_server_visual.py  lerobot_setup_guide.md  lightweight_hand_tracker.py  quick_start.py  quick_test.py  safe_robot_test.py  (+16 more)
(+52 files in other folders)
